tests/ui/issues/issue-19734.stderr
error: cannot find macro `undef`
  --> $DIR/issue-19734.rs:6:5
   |
LL |     undef!();
   |     ^^^^^ not found in this scope

error: aborting due to 1 previous error

